fixes layout bug

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -108,7 +108,8 @@ ul {
     }
 
     @media screen and (min-width: $sm) {
-      margin-right: $spacing;
+      padding-right: $spacing / 2;
+      padding-left: $spacing / 2;
       margin-bottom: 0;
       border-right: 1px solid $light-card-shadow;
       border-bottom: 0;
